minify the code

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -2,17 +2,7 @@
 @import "_variables"
 @import "_util/mixin"
 
-global-reset()
-
-
-@import "../../node_modules/font-awesome/css/font-awesome.css"
-/* // fontawesome */
-
-@import "../../node_modules/materialize-css/dist/css/materialize.css"
-/* // materialize */
-
-@import "../../node_modules/lightbox2/dist/css/lightbox.css"
-/* // lightbox */
+//global-reset()
 
 html {
   font-size: font-size
