--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -55,6 +55,7 @@
 
   <link href="//fonts.googleapis.com/css?family=Source+Code+Pro|Material+Icons|Raleway:400,300,700" rel="stylesheet" type="text/css" />
 
+  <%- css('css/vendors') %>
   <%- css('css/style') %>
   <%- partial('_partial/google-analytics') %>
 
