--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -15,12 +15,17 @@
         <% } %>
       </ul>
 
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse">
         <i class="material-icons">menu</i>
       </a>
     </div>
   </nav>
 </div>
+
+<ul id="nav-mobile" class="side-nav">
+  <% for (var i in theme.menu){ %>
+  <li>
+    <a class="main-nav-link" href="<%- url_for(theme.menu[i]) %>"><%= i %></a>
+  </li>
+  <% } %>
+</ul>
