--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -9,9 +9,16 @@
     color: color-featured;
   }
 
-  &, & .nav-wrapper i, & a.button-collapse, & a.button-collapse i {
+  &,
+  .nav-wrapper i,
+  a.button-collapse,
+  a.button-collapse i {
     height: navbar-height;
     line-height: navbar-height;
+  }
+
+  a.button-collapse {
+    margin: 0;
   }
 }
 
@@ -21,6 +28,12 @@
 
 #logo-container {
   margin-top: 12px;
+  width: 100%;
+
+  @media (max-width: 390px) {
+    margin-left: 20px;
+    font-size: 34px
+  }
 
   > * {
     display: block;
