Fixed header container size

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -28,7 +28,10 @@
 
 #logo-container {
   margin-top: 12px;
-  width: 100%;
+
+  @media (max-width: 992px) {
+    width: 100%;
+  }
 
   @media (max-width: 390px) {
     margin-left: 20px;
