--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -15,14 +15,14 @@
         <% } %>
       </ul>
 
-      <a href="#" data-activates="nav-mobile" class="button-collapse">
+      <a href="#" data-target="nav-mobile" class="button-collapse sidenav-trigger">
         <i class="material-icons">menu</i>
       </a>
     </div>
   </nav>
 </div>
 
-<ul id="nav-mobile" class="side-nav">
+<ul id="nav-mobile" class="sidenav">
   <% for (var i in theme.menu){ %>
   <li>
     <a class="main-nav-link" href="<%- url_for(theme.menu[i]) %>"><%= i %></a>
